Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2023/commands/710.77A.222A00|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A00|fc=1.yaml
@@ -13,6 +13,10 @@ test_cases:
     VOLKSWAGEN_SSB_VT: 13.3
   response: 77A04622A001B
 - expected_values:
+    VOLKSWAGEN_MQB_GEN_TRG_V: 13.5
+    VOLKSWAGEN_SSB_VT: 13.5
+  response: 77A04622A001D
+- expected_values:
     VOLKSWAGEN_MQB_GEN_TRG_V: 13.9
     VOLKSWAGEN_SSB_VT: 13.9
   response: 77A04622A0021
