--- a/tests/test_cases/2023/commands/746.7B0.222604|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222604|fc=1.yaml
@@ -10,14 +10,23 @@ test_cases:
     VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 4.9
   response: 7B00462260431
 - expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 5
+  response: 7B00462260432
+- expected_values:
     VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 5.3
   response: 7B00462260435
 - expected_values:
     VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 6.6
   response: 7B00462260442
 - expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 8.4
+  response: 7B00462260454
+- expected_values:
     VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 9.1
   response: 7B0046226045B
 - expected_values:
     VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 9.6
   response: 7B00462260460
+- expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 12.2
+  response: 7B0046226047A
