--- a/tests/test_cases/2023/commands/746.7B0.222606|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222606|fc=1.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_RAD_FAN_ACT_DUTY: 30
   response: 7B0046226064B
+- expected_values:
+    VOLKSWAGEN_CLIMATE_RAD_FAN_ACT_DUTY: 46
+  response: 7B00462260673
