--- a/tests/test_cases/2023/commands/746.7B0.222612|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222612|fc=1.yaml
@@ -13,6 +13,10 @@ test_cases:
     VOLKSWAGEN_T_AFTER_EVAPORATOR: 8.66667
   response: 7B0046226121A
 - expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 10.323
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 10.33333
+  response: 7B0046226121F
+- expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 10.989
     VOLKSWAGEN_T_AFTER_EVAPORATOR: 11
   response: 7B00462261221
@@ -20,6 +24,10 @@ test_cases:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 13.32
     VOLKSWAGEN_T_AFTER_EVAPORATOR: 13.33333
   response: 7B00462261228
+- expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 14.319
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 14.33333
+  response: 7B0046226122B
 - expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 15.318
     VOLKSWAGEN_T_AFTER_EVAPORATOR: 15.33333
