--- a/tests/test_cases/2023/commands/7E0.221151.yaml
+++ b/tests/test_cases/2023/commands/7E0.221151.yaml
@@ -20,3 +20,7 @@ test_cases:
     VOLKSWAGEN_EM_RPM_1: 8092.5
     VOLKSWAGEN_MISFIRES__CYL__4: 16185
   response: 7E8056211513F39
+- expected_values:
+    VOLKSWAGEN_EM_RPM_1: 8112
+    VOLKSWAGEN_MISFIRES__CYL__4: 16224
+  response: 7E8056211513F60
