--- a/tests/test_cases/2023/commands/7E0.221152.yaml
+++ b/tests/test_cases/2023/commands/7E0.221152.yaml
@@ -16,3 +16,7 @@ test_cases:
     VOLKSWAGEN_EM_RPM_2: 5710.5
     VOLKSWAGEN_MISFIRES__CYL__2: 11421
   response: 7E8056211522C9D
+- expected_values:
+    VOLKSWAGEN_EM_RPM_2: 5736
+    VOLKSWAGEN_MISFIRES__CYL__2: 11472
+  response: 7E8056211522CD0
