--- a/tests/test_cases/2023/commands/7E0.7E8.22114F.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22114F.yaml
@@ -24,3 +24,11 @@ test_cases:
     VOLKSWAGEN_MISFIRES_C1: 20255
     VOLKSWAGEN_PQ35_SOOT_MASS_CALC: 202.55
   response: 7E80562114F4F1F
+- expected_values:
+    VOLKSWAGEN_MISFIRES_C1: 20366
+    VOLKSWAGEN_PQ35_SOOT_MASS_CALC: 203.66
+  response: 7E80562114F4F8E
+- expected_values:
+    VOLKSWAGEN_MISFIRES_C1: 20382
+    VOLKSWAGEN_PQ35_SOOT_MASS_CALC: 203.82
+  response: 7E80562114F4F9E
