--- a/tests/test_cases/2023/commands/7E0.7E8.221150.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221150.yaml
@@ -15,3 +15,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MISFIRES_C3: 16441
   response: '7E8056211504039'
+- expected_values:
+    VOLKSWAGEN_MISFIRES_C3: 16528
+  response: '7E8056211504090'
+- expected_values:
+    VOLKSWAGEN_MISFIRES_C3: 16531
+  response: '7E8056211504093'
