--- a/tests/test_cases/2023/commands/7E0.7E8.221153.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221153.yaml
@@ -20,3 +20,15 @@ test_cases:
     VOLKSWAGEN_EM_TORQ_1: 546.375
     VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 174.84
   response: 7E805621153444C
+- expected_values:
+    VOLKSWAGEN_EM_TORQ_1: 548.28125
+    VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 175.45
+  response: '7E8056211534489'
+- expected_values:
+    VOLKSWAGEN_EM_TORQ_1: 548.375
+    VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 175.48
+  response: 7E805621153448C
+- expected_values:
+    VOLKSWAGEN_EM_TORQ_1: 548.5625
+    VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 175.54
+  response: '7E8056211534492'
