--- a/tests/test_cases/2023/commands/7E0.7E8.2211BB.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2211BB.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_OIL_CRIT: 3.2616
   response: 7E8056211BB1FDA
 - expected_values:
+    VOLKSWAGEN_OIL_CRIT: 3.2828
+  response: 7E8056211BB200F
+- expected_values:
     VOLKSWAGEN_OIL_CRIT: 3.3408
   response: 7E8056211BB20A0
 - expected_values:
