--- a/tests/test_cases/2023/commands/7E0.7E8.221282.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221282.yaml
@@ -4,6 +4,15 @@ test_cases:
     VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST: 162.31
   response: '7E8056212824594'
 - expected_values:
+    VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST: 375.81
+  response: 7E8056212826F47
+- expected_values:
+    VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST: 387.47
+  response: 7E805621282718E
+- expected_values:
+    VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST: 394.05
+  response: 7E80562128272D7
+- expected_values:
     VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST: 430.69
   response: 7E80562128279FF
 - expected_values:
