--- a/tests/test_cases/2023/commands/7E0.7E8.2214CE.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2214CE.yaml
@@ -9,3 +9,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_POST_INJ_3_ACTIVATION_DURATION: 2.9624
   response: 7E8056214CE1CEE
+- expected_values:
+    VOLKSWAGEN_PQ35_POST_INJ_3_ACTIVATION_DURATION: 3.0124
+  response: 7E8056214CE1D6B
+- expected_values:
+    VOLKSWAGEN_PQ35_POST_INJ_3_ACTIVATION_DURATION: 3.0184
+  response: 7E8056214CE1D7A
