--- a/tests/test_cases/2023/commands/7E0.7E8.2214F8.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2214F8.yaml
@@ -7,8 +7,17 @@ test_cases:
     VOLKSWAGEN_AAT_V1: 66.68
   response: 7E8056214F80B6E
 - expected_values:
+    VOLKSWAGEN_AAT_V1: 72.08
+  response: 7E8056214F80B8C
+- expected_values:
+    VOLKSWAGEN_AAT_V1: 73.34
+  response: 7E8056214F80B93
+- expected_values:
     VOLKSWAGEN_AAT_V1: 74.78
   response: 7E8056214F80B9B
 - expected_values:
     VOLKSWAGEN_AAT_V1: 76.04
   response: 7E8056214F80BA2
+- expected_values:
+    VOLKSWAGEN_AAT_V1: 85.58
+  response: 7E8056214F80BD7
