--- a/tests/test_cases/2023/commands/7E1.7E9.2210B0.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.2210B0.yaml
@@ -28,3 +28,24 @@ test_cases:
     7E921A30044F7C501CE
     7E922F3620000003200
     7E923000000AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_GR: 227.84
+  response: |-
+    7E910176210B0005930
+    7E9214E0045915E01D0
+    7E9229AFC0000003200
+    7E923000000AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_GR: 227.84
+  response: |-
+    7E910176210B0005933
+    7E921A30045915E01D0
+    7E9229AFC0000003200
+    7E923000000AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_GR: 227.84
+  response: |-
+    7E910176210B0005946
+    7E92129004596F901D0
+    7E922BC500000003200
+    7E923000000AAAAAAAA
