--- a/tests/test_cases/2023/commands/7E1.7E9.223841.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.223841.yaml
@@ -16,3 +16,11 @@ test_cases:
     VOLKSWAGEN_ODO_TCM_1: 3995669760
     VOLKSWAGEN_ODO_V1: 138699
   response: 7E907623841001529EE
+- expected_values:
+    VOLKSWAGEN_ODO_TCM_1: 742135040
+    VOLKSWAGEN_ODO_V1: 139166
+  response: 7E90762384100153C2C
+- expected_values:
+    VOLKSWAGEN_ODO_TCM_1: 909907200
+    VOLKSWAGEN_ODO_V1: 139167
+  response: 7E90762384100153C36
