--- a/tests/test_cases/2023/commands/710.77A.222A0B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0B|fc=1.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_BAT_T_V2: 26
   response: 77A04622A0B42
 - expected_values:
+    VOLKSWAGEN_BAT_T_V2: 28
+  response: 77A04622A0B44
+- expected_values:
     VOLKSWAGEN_BAT_T_V2: 29
   response: 77A04622A0B45
 - expected_values:
