--- a/tests/test_cases/2023/commands/710.77A.222A0C|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0C|fc=1.yaml
@@ -13,6 +13,10 @@ test_cases:
     VOLKSWAGEN_SSB_SOC: 65
   response: 77A04622A0C41
 - expected_values:
+    VOLKSWAGEN_BAT_SOC: 72
+    VOLKSWAGEN_SSB_SOC: 72
+  response: 77A04622A0C48
+- expected_values:
     VOLKSWAGEN_BAT_SOC: 73
     VOLKSWAGEN_SSB_SOC: 73
   response: 77A04622A0C49
