--- a/tests/test_cases/2023/commands/710.77A.222A0F|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0F|fc=1.yaml
@@ -13,6 +13,9 @@ test_cases:
     VOLKSWAGEN_USE_BAT_CHG: 40
   response: 77A04622A0F28
 - expected_values:
+    VOLKSWAGEN_USE_BAT_CHG: 45
+  response: 77A04622A0F2D
+- expected_values:
     VOLKSWAGEN_USE_BAT_CHG: 46
   response: 77A04622A0F2E
 - expected_values:
