--- a/tests/test_cases/2023/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2023/commands/714.77E.221014|fc=1.yaml
@@ -13,6 +13,14 @@ test_cases:
     VOLKSWAGEN_DASH_AMBIENT_AIR_T: 21.5
   response: 77E046210148F
 - expected_values:
+    VOLKSWAGEN_AAT: 22
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 22
+  response: '77E0462101490'
+- expected_values:
+    VOLKSWAGEN_AAT: 23
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 23
+  response: '77E0462101492'
+- expected_values:
     VOLKSWAGEN_AAT: 24.5
     VOLKSWAGEN_DASH_AMBIENT_AIR_T: 24.5
   response: '77E0462101495'
