--- a/tests/test_cases/2023/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/714.77E.22224B|fc=1.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 133
   response: 77E0562224B0085
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 134
+  response: 77E0562224B0086
