--- a/tests/test_cases/2023/commands/746.7B0.222603|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222603|fc=1.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_CLIMATE_A_C_COMP_SPD: 0
   response: 7B00462260300
 - expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_SPD: 700
+  response: 7B00462260307
+- expected_values:
     VOLKSWAGEN_CLIMATE_A_C_COMP_SPD: 800
   response: 7B00462260308
 - expected_values:
