--- a/tests/test_cases/2023/commands/746.7B0.222609|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222609|fc=1.yaml
@@ -9,6 +9,10 @@ test_cases:
     VOLKSWAGEN_AAT_V2: 19.5
   response: 7B00462260927
 - expected_values:
+    VOLKSWAGEN_AAT_FROMCABIN: 23
+    VOLKSWAGEN_AAT_V2: 23
+  response: 7B0046226092E
+- expected_values:
     VOLKSWAGEN_AAT_FROMCABIN: 24.5
     VOLKSWAGEN_AAT_V2: 24.5
   response: 7B00462260931
@@ -16,3 +20,7 @@ test_cases:
     VOLKSWAGEN_AAT_FROMCABIN: 25
     VOLKSWAGEN_AAT_V2: 25
   response: 7B00462260932
+- expected_values:
+    VOLKSWAGEN_AAT_FROMCABIN: 30.5
+    VOLKSWAGEN_AAT_V2: 30.5
+  response: 7B0046226093D
