--- a/tests/test_cases/2023/commands/746.7B0.22260C|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22260C|fc=1.yaml
@@ -5,6 +5,10 @@ test_cases:
     VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 22.33333
   response: '7B0 04 62 26 0C 43 '
 - expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 12.321
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 12.33333
+  response: 7B00462260C25
+- expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 17.982
     VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 18
   response: 7B00462260C36
