--- a/tests/test_cases/2023/commands/746.7B0.22260D|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22260D|fc=1.yaml
@@ -5,6 +5,14 @@ test_cases:
     VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 25
   response: '7B0 04 62 26 0D 4B '
 - expected_values:
+    VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 13.32
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 13.33333
+  response: 7B00462260D28
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 14.319
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 14.33333
+  response: 7B00462260D2B
+- expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 17.316
     VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 17.33333
   response: 7B00462260D34
