--- a/tests/test_cases/2023/commands/746.7B0.222611|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222611|fc=1.yaml
@@ -5,6 +5,14 @@ test_cases:
     VOLKSWAGEN_LEG_DEFLECTOR_T: 23.66667
   response: '7B0 04 62 26 11 47 '
 - expected_values:
+    VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 18.648
+    VOLKSWAGEN_LEG_DEFLECTOR_T: 18.66667
+  response: 7B00462261138
+- expected_values:
+    VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 19.647
+    VOLKSWAGEN_LEG_DEFLECTOR_T: 19.66667
+  response: 7B0046226113B
+- expected_values:
     VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 23.31
     VOLKSWAGEN_LEG_DEFLECTOR_T: 23.33333
   response: 7B00462261146
