--- a/tests/test_cases/2023/commands/746.7B0.22261E|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22261E|fc=1.yaml
@@ -12,3 +12,7 @@ test_cases:
     VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 96.5
     VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 172
   response: 7B00662261E00ACC1
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 97.5
+    VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 173
+  response: 7B00662261E00ADC3
