--- a/tests/test_cases/2023/commands/746.7B0.222622|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222622|fc=1.yaml
@@ -9,9 +9,17 @@ test_cases:
     VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 3
   response: 7B006622622002006
 - expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 14.5
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 14.5
+  response: 7B00662262200381D
+- expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 18
     VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 18
   response: 7B006622622003F24
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 19.5
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 19.5
+  response: 7B006622622004227
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 27
     VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 27
