--- a/tests/test_cases/2023/commands/7E0.0104.yaml
+++ b/tests/test_cases/2023/commands/7E0.0104.yaml
@@ -7,10 +7,16 @@ test_cases:
     LOAD_PCT: 19.21569
   response: '7E803410431'
 - expected_values:
+    LOAD_PCT: 19.60784
+  response: '7E803410432'
+- expected_values:
     LOAD_PCT: 21.96078
   response: |-
     7E803410438
     7E903410438
+- expected_values:
+    LOAD_PCT: 23.92157
+  response: 7E80341043D
 - expected_values:
     LOAD_PCT: 29.01961
   response: 7E80341044A
