--- a/tests/test_cases/2023/commands/7E0.2211BA.yaml
+++ b/tests/test_cases/2023/commands/7E0.2211BA.yaml
@@ -1,8 +1,14 @@
 command_id: 7E0.2211BA
 test_cases:
 - expected_values:
+    VOLKSWAGEN_OIL_LEVEL: 41.732
+  response: 7E8056211BA28C1
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL: 46.664
   response: 7E8056211BA2D92
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL: 48.852
+  response: 7E8056211BA2FB5
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL: 52.48
   response: 7E8056211BA3340
