--- a/tests/test_cases/2023/commands/7E0.7E8.221002.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221002.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_AC_COMP_T: 7.2
   response: '7E8056210020048'
 - expected_values:
+    VOLKSWAGEN_AC_COMP_T: 8.6
+  response: '7E8056210020056'
+- expected_values:
     VOLKSWAGEN_AC_COMP_T: 8.7
   response: '7E8056210020057'
