--- a/tests/test_cases/2023/commands/7E0.7E8.2210DE.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2210DE.yaml
@@ -4,6 +4,12 @@ test_cases:
     VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: 0
   response: 7E8056210DE0000
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: 0.008
+  response: 7E8056210DE00A0
+- expected_values:
+    VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: 0.0303
+  response: 7E8056210DE025E
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: 0.0599
   response: 7E8056210DE04AE
 - expected_values:
