--- a/tests/test_cases/2023/commands/7E0.7E8.2210E0.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2210E0.yaml
@@ -20,3 +20,15 @@ test_cases:
     VOLKSWAGEN_ODO_2_V3: 138699
     VOLKSWAGEN_ODO_V4: 138699
   response: 7E8076210E000021DCB
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 139166
+    VOLKSWAGEN_ODO_V4: 139166
+  response: 7E8076210E000021F9E
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 139167
+    VOLKSWAGEN_ODO_V4: 139167
+  response: 7E8076210E000021F9F
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 139222
+    VOLKSWAGEN_ODO_V4: 139222
+  response: 7E8076210E000021FD6
