--- a/tests/test_cases/2023/commands/7E0.7E8.221139.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221139.yaml
@@ -9,9 +9,17 @@ test_cases:
     VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 163.84
   response: '7E8056211394000'
 - expected_values:
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 165.42
+    VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 165.42
+  response: 7E805621139409E
+- expected_values:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 165.84
     VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 165.84
   response: 7E80562113940C8
+- expected_values:
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 165.88
+    VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 165.88
+  response: 7E80562113940CC
 - expected_values:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 168.78
     VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 168.78
@@ -20,3 +28,7 @@ test_cases:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 170.93
     VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 170.93
   response: 7E80562113942C5
+- expected_values:
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 171.39
+    VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 171.39
+  response: 7E80562113942F3
