--- a/tests/test_cases/2023/commands/7E0.7E8.2211BD.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2211BD.yaml
@@ -1,6 +1,10 @@
 command_id: 7E0.7E8.2211BD
 test_cases:
 - expected_values:
+    VOLKSWAGEN_OIL_LEVEL_WARN: 1.2384
+    VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 12.384
+  response: 7E8056211BD0C18
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.2644
     VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 12.644
   response: 7E8056211BD0C59
@@ -12,6 +16,10 @@ test_cases:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.438
     VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 14.38
   response: 7E8056211BD0E0B
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL_WARN: 1.4456
+    VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 14.456
+  response: 7E8056211BD0E1E
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4688
     VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 14.688
