--- a/tests/test_cases/2023/commands/7E0.7E8.2211BF.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2211BF.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.7E8.2211BF
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_FUEL_P_REG: 0.03
+  response: 7E8056211BF0003
+- expected_values:
+    VOLKSWAGEN_PQ35_FUEL_P_REG: 0.08
+  response: 7E8056211BF0008
+- expected_values:
     VOLKSWAGEN_PQ35_FUEL_P_REG: 0.12
   response: 7E8056211BF000C
 - expected_values:
