--- a/tests/test_cases/2023/commands/7E0.7E8.221213.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221213.yaml
@@ -4,6 +4,15 @@ test_cases:
     VOLKSWAGEN_PQ35_ENVD_CAM_IN_1: 0
   response: 7E80562121300A8
 - expected_values:
+    VOLKSWAGEN_PQ35_ENVD_CAM_IN_1: 0
+  response: 7E80562121300AC
+- expected_values:
+    VOLKSWAGEN_PQ35_ENVD_CAM_IN_1: 0
+  response: 7E80562121300C4
+- expected_values:
+    VOLKSWAGEN_PQ35_ENVD_CAM_IN_1: 0
+  response: 7E80562121300F9
+- expected_values:
     VOLKSWAGEN_PQ35_ENVD_CAM_IN_1: 1
   response: 7E805621213010B
 - expected_values:
