--- a/tests/test_cases/2023/commands/7E0.7E8.22162D.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22162D.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_PQ35_FUEL_T: -273.1
   response: 7E80762162D00000800
 - expected_values:
+    VOLKSWAGEN_PQ35_FUEL_T: -221.9
+  response: 7E80762162D02000000
+- expected_values:
     VOLKSWAGEN_PQ35_FUEL_T: -209.1
   response: 7E80762162D02800000
