--- a/tests/test_cases/2023/commands/7E0.7E8.22F40D.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22F40D.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_VSS_V2: 0
   response: 7E80462F40D00
 - expected_values:
+    VOLKSWAGEN_VSS_V2: 1
+  response: 7E80462F40D01
+- expected_values:
     VOLKSWAGEN_VSS_V2: 5
   response: 7E80462F40D05
 - expected_values:
