--- a/tests/test_cases/2023/commands/7E0.7E8.22F430.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22F430.yaml
@@ -7,5 +7,11 @@ test_cases:
     VOLKSWAGEN_WARM_UPS: 4
   response: 7E80462F43004
 - expected_values:
+    VOLKSWAGEN_WARM_UPS: 15
+  response: 7E80462F4300F
+- expected_values:
+    VOLKSWAGEN_WARM_UPS: 16
+  response: 7E80462F43010
+- expected_values:
     VOLKSWAGEN_WARM_UPS: 255
   response: 7E80462F430FF
