--- a/tests/test_cases/2023/commands/7E1.7E9.222102.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.222102.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_AT_INPUT_SPEED: 0
   response: '7E9056221020000'
 - expected_values:
+    VOLKSWAGEN_AT_INPUT_SPEED: 163.5
+  response: 7E905622102028E
+- expected_values:
     VOLKSWAGEN_AT_INPUT_SPEED: 225.25
   response: '7E9056221020385'
 - expected_values:
