--- a/tests/test_cases/2023/commands/7E1.7E9.222103.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.222103.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_AT_OUTPUT_SPEED: 0
   response: '7E9056221030000'
 - expected_values:
+    VOLKSWAGEN_AT_OUTPUT_SPEED: 171.25
+  response: 7E90562210302AD
+- expected_values:
     VOLKSWAGEN_AT_OUTPUT_SPEED: 173.75
   response: 7E90562210302B7
