--- a/tests/test_cases/2023/commands/7E1.7E9.222104.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.222104.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.222104
 test_cases:
 - expected_values:
+    VOLKSWAGEN_ATF_T: 30
+  response: '7E90462210446'
+- expected_values:
+    VOLKSWAGEN_ATF_T: 38
+  response: 7E9046221044E
+- expected_values:
     VOLKSWAGEN_ATF_T: 47
   response: '7E90462210457'
 - expected_values:
