--- a/tests/test_cases/2023/commands/7E1.7E9.222131.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.222131.yaml
@@ -7,5 +7,11 @@ test_cases:
     VOLKSWAGEN_TORQUE_CONVERTER_SLIP: 3
   response: '7E9056221310003'
 - expected_values:
+    VOLKSWAGEN_TORQUE_CONVERTER_SLIP: 39
+  response: '7E9056221310027'
+- expected_values:
     VOLKSWAGEN_TORQUE_CONVERTER_SLIP: 607
   response: 7E905622131025F
+- expected_values:
+    VOLKSWAGEN_TORQUE_CONVERTER_SLIP: 701
+  response: 7E90562213102BD
