--- a/tests/test_cases/2023/commands/7E1.7E9.223816.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.223816.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_I_GEAR_DQ200: 2
   response: '7E90462381604'
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_I_GEAR_DQ200: 3
+  response: '7E90462381605'
